Fixed glitch, cleaned up animations
- fixed overlap glitch where tile was overlapping the plant --> set z-index of container to 4
- fixed small transition bugs with the plant animations

--- a/src/scss/Plant.scss
+++ b/src/scss/Plant.scss
@@ -5,12 +5,12 @@
     -webkit-transform: rotateX(140deg) rotateY(140deg) rotateZ(-33deg) translate3d(6px, 50px, 60px);
     pointer-events: none;
     overflow: visible;
+    z-index: 4;
 
     .plant {
         position: relative;
         display: flex;
         justify-content: center;
-        z-index: 4;
     }
 
     .plant1 {
@@ -80,11 +80,11 @@
             }
 
             .leaf1 {
-                transform: translate(-2px, -80px) rotate(40deg);
+                transform: translate(-1px, -80px) rotate(40deg);
             }
 
             .leaf2 {
-                transform: translate(2px, -76px) rotate(140deg);
+                transform: translate(1px, -76px) rotate(140deg);
             }
         }
 
@@ -179,7 +179,7 @@
                 position: absolute;
                 background: #75000c;
                 width: 4px;
-                height: 80px;
+                height: 90px;
                 bottom: -10px;
                 border-radius: 30px;
                 z-index: 2;
@@ -308,12 +308,12 @@
             }
 
             .leaf1 {
-                transform: translate(-12px, -70px) rotate(-50deg);
+                transform: translate(-1px, -74px) rotate(-50deg);
                 border-radius: 50% 70px;
             }
 
             .leaf2 {
-                transform: translate(12px, -70px) rotate(50deg);
+                transform: translate(1px, -74px) rotate(50deg);
                 border-radius: 70px 50%;
             }
         }
@@ -398,7 +398,7 @@
                 width: 0px;
                 height: 0px;
                 border-radius: 16px 16px 4px 4px;
-                bottom: 80px;
+                bottom: 74px;
                 z-index: 4;
                 overflow: hidden;
             }
@@ -447,12 +447,12 @@
             }
 
             .left-leaf {
-                transform: translate(-10px, -30px) rotate(-30deg) skew(-30deg);
+                transform: translate(-1px, -50px) rotate(-30deg) skew(-30deg);
                 border-radius: 60% 2px;
             }
 
             .right-leaf {
-                transform: translate(10px, -30px) rotate(30deg) skew(30deg);
+                transform: translate(1px, -50px) rotate(30deg) skew(30deg);
                 border-radius: 2px 60%;
             }
         }
@@ -762,7 +762,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                bottom: 80px;
+                bottom: 70px;
                 z-index: 4;
 
                 .petal {
@@ -773,12 +773,12 @@
                 }
 
                 .petal1 {
-                    transform: translate(-10px, 0px) rotate(-30deg) skew(-30deg);
+                    transform: translate(-1px, 0px) rotate(-30deg) skew(-30deg);
                     border-radius: 50% 2px;
                 }
 
                 .petal2 {
-                    transform: translate(10px, 0px) rotate(30deg) skew(30deg);
+                    transform: translate(1px, 0px) rotate(30deg) skew(30deg);
                     border-radius: 2px 50%;
                 }
             }
@@ -856,12 +856,12 @@
             }
 
             .left-leaf {
-                transform: translate(-10px, -50px) rotate(-30deg) skew(-30deg);
+                transform: translate(0px, -77px) rotate(-30deg) skew(-30deg);
                 border-radius: 60% 2px;
             }
 
             .right-leaf {
-                transform: translate(10px, -50px) rotate(30deg) skew(30deg);
+                transform: translate(0px, -77px) rotate(30deg) skew(30deg);
                 border-radius: 2px 60%;
             }
         }
@@ -1104,6 +1104,14 @@
                     height: 0px;
                     background: #ab5e2c;
                     border-radius: 40px;
+                }
+
+                .leaf1 {
+                    transform: translate(6px, 10px) rotate(10deg);
+                }
+
+                .leaf2 {
+                    transform: translate(14px, 10px) rotate(-10deg);
                 }
             }
         }
